[gd_scene load_steps=38 format=2]

[ext_resource path="res://orc 3 walk-Sheet.png" type="Texture" id=1]
[ext_resource path="res://orc 3idle-Sheet.png" type="Texture" id=2]
[ext_resource path="res://ORC3 ATTACK-Sheet.png" type="Texture" id=3]
[ext_resource path="res://Enemy1.gd" type="Script" id=4]
[ext_resource path="res://orc3 dead-Sheet.png" type="Texture" id=5]
[ext_resource path="res://ConnectionII.tres" type="DynamicFont" id=6]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 120, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 240, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 360, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 240, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 360, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 120, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 360, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 600, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 120, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 240, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 360, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 480, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 600, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 240, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 360, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 480, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 600, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 720, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 840, 0, 120, 120 )

[sub_resource type="SpriteFrames" id=25]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "die",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=26]
radius = 22.123

[sub_resource type="CircleShape2D" id=27]
radius = 111.037

[sub_resource type="CircleShape2D" id=28]
radius = 45.3267

[sub_resource type="CircleShape2D" id=29]
radius = 22.3499

[sub_resource type="RectangleShape2D" id=30]
extents = Vector2( 20.4841, 6.38454 )

[sub_resource type="Animation" id=31]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("damageindicator:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("damageindicator:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -16.4949, -31.0068 ), Vector2( -15.7458, -69.2136 ), Vector2( 11.9729, -63.9695 ), Vector2( 26.956, -70.7119 ) ]
}

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.382645, -60.0002 )
scale = Vector2( 1.39286, 1.35545 )
frames = SubResource( 25 )
animation = "idle"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.471935 )
shape = SubResource( 26 )

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 4096
collision_mask = 4096

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 27 )

[node name="Attack" type="Area2D" parent="."]
collision_layer = 16384
collision_mask = 16384

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack"]
shape = SubResource( 28 )

[node name="Hit" type="Area2D" parent="." groups=[
"bullet_hit",
]]
position = Vector2( 0.943878, -35.8672 )
collision_layer = 8192
collision_mask = 8192

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hit"]
position = Vector2( -1.52588e-05, 35.9188 )
shape = SubResource( 29 )

[node name="secret hitpoint" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="secret hitpoint"]
position = Vector2( -0.749146, -65.1764 )
shape = SubResource( 30 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/life = SubResource( 31 )

[node name="damageindicator" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -16.4949
margin_top = -31.0068
margin_right = 16.5051
margin_bottom = 38.9932
custom_fonts/font = ExtResource( 6 )
text = "1
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_entered" from="Attack" to="." method="_on_Attack_body_entered"]
[connection signal="body_exited" from="Attack" to="." method="_on_Attack_body_exited"]
[connection signal="area_entered" from="Hit" to="." method="_on_Hit_area_entered"]
[connection signal="body_entered" from="secret hitpoint" to="." method="_on_secret_hitpoint_body_entered"]
